src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__slice_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 5,
                                        end: 10,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 5,
                                end: 10,
                                start_line: 1,
                                start_col: 6,
                            },
                        },
                        ty: Type {
                            kind: Reference {
                                lifetime: None,
                                mutable: false,
                                inner: Type {
                                    kind: Slice {
                                        element: Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                                span: Span {
                                                                    start: 14,
                                                                    end: 17,
                                                                    start_line: 1,
                                                                    start_col: 15,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 14,
                                                        end: 17,
                                                        start_line: 1,
                                                        start_col: 15,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 14,
                                                end: 17,
                                                start_line: 1,
                                                start_col: 15,
                                            },
                                        },
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 18,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                            },
                            span: Span {
                                start: 12,
                                end: 18,
                                start_line: 1,
                                start_col: 13,
                            },
                        },
                        span: Span {
                            start: 5,
                            end: 18,
                            start_line: 1,
                            start_col: 6,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 20,
                            end: 22,
                            start_line: 1,
                            start_col: 21,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 22,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 22,
        start_line: 1,
        start_col: 1,
    },
}
