src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__static_decl.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Static(
            StaticDecl {
                attrs: [],
                vis: Private,
                is_mut: true,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 11,
                        end: 18,
                        start_line: 1,
                        start_col: 12,
                    },
                },
                ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 20,
                                            end: 23,
                                            start_line: 1,
                                            start_col: 21,
                                        },
                                    },
                                    args: None,
                                },
                            ],
                            span: Span {
                                start: 20,
                                end: 23,
                                start_line: 1,
                                start_col: 21,
                            },
                        },
                    ),
                    span: Span {
                        start: 20,
                        end: 23,
                        start_line: 1,
                        start_col: 21,
                    },
                },
                value: Expr {
                    kind: Literal(
                        Literal {
                            kind: Int {
                                value: 0,
                                suffix: None,
                            },
                            span: Span {
                                start: 26,
                                end: 27,
                                start_line: 1,
                                start_col: 27,
                            },
                        },
                    ),
                    span: Span {
                        start: 26,
                        end: 27,
                        start_line: 1,
                        start_col: 27,
                    },
                },
                span: Span {
                    start: 0,
                    end: 28,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 28,
        start_line: 1,
        start_col: 1,
    },
}
