src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__struct_pattern.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 20,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 20,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 20,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Struct {
                                                    path: TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 23,
                                                                        end: 28,
                                                                        start_line: 1,
                                                                        start_col: 24,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 23,
                                                            end: 28,
                                                            start_line: 1,
                                                            start_col: 24,
                                                        },
                                                    },
                                                    fields: [
                                                        StructPatternField {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 4,
                                                                },
                                                                span: Span {
                                                                    start: 31,
                                                                    end: 32,
                                                                    start_line: 1,
                                                                    start_col: 32,
                                                                },
                                                            },
                                                            pattern: None,
                                                            span: Span {
                                                                start: 31,
                                                                end: 32,
                                                                start_line: 1,
                                                                start_col: 32,
                                                            },
                                                        },
                                                        StructPatternField {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 5,
                                                                },
                                                                span: Span {
                                                                    start: 34,
                                                                    end: 35,
                                                                    start_line: 1,
                                                                    start_col: 35,
                                                                },
                                                            },
                                                            pattern: None,
                                                            span: Span {
                                                                start: 34,
                                                                end: 35,
                                                                start_line: 1,
                                                                start_col: 35,
                                                            },
                                                        },
                                                    ],
                                                    rest: false,
                                                },
                                                span: Span {
                                                    start: 23,
                                                    end: 37,
                                                    start_line: 1,
                                                    start_col: 24,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Binary {
                                                    op: Add,
                                                    left: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 4,
                                                                            },
                                                                            span: Span {
                                                                                start: 41,
                                                                                end: 42,
                                                                                start_line: 1,
                                                                                start_col: 42,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 41,
                                                                    end: 42,
                                                                    start_line: 1,
                                                                    start_col: 42,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 41,
                                                            end: 42,
                                                            start_line: 1,
                                                            start_col: 42,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 5,
                                                                            },
                                                                            span: Span {
                                                                                start: 45,
                                                                                end: 46,
                                                                                start_line: 1,
                                                                                start_col: 46,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 45,
                                                                    end: 46,
                                                                    start_line: 1,
                                                                    start_col: 46,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 45,
                                                            end: 46,
                                                            start_line: 1,
                                                            start_col: 46,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 41,
                                                    end: 46,
                                                    start_line: 1,
                                                    start_col: 42,
                                                },
                                            },
                                            span: Span {
                                                start: 23,
                                                end: 46,
                                                start_line: 1,
                                                start_col: 24,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 48,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 50,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 50,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 50,
        start_line: 1,
        start_col: 1,
    },
}
